--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "5425ba6b-139d-4184-9d9b-61eabbc23cab"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
