Added the state of the data function to the app.component.ts file

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,274 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+.angular/cache/babel-webpack/0bdd701a6a1543d0944a20932d8431a3.json
+.angular/cache/babel-webpack/0be28a9c445ee2a772b8e8c885e94480.json
+.angular/cache/babel-webpack/0cd06926a1ec051ee2217d5c49aa9067.json
+.angular/cache/babel-webpack/0cda07c97180428ce6938129dc749b5d.json
+.angular/cache/babel-webpack/0dad3bea26c31056444f3875c636074b.json
+.angular/cache/babel-webpack/0dca0541fb8d045ee05ddd6ea3d5de03.json
+.angular/cache/babel-webpack/0f2999539f0979213c4019b3c5598f63.json
+.angular/cache/babel-webpack/00fa7e7379ed8af32eec5c960d085876.json
+.angular/cache/babel-webpack/1aba0f5c172f89f43d59e9cae4795edd.json
+.angular/cache/babel-webpack/1c9c264fd91dc7ec9dd771d23d40a934.json
+.angular/cache/babel-webpack/1dd2c12331d3e87608283f5e56343789.json
+.angular/cache/babel-webpack/1e0c6e71aaa2d3339c061b292b966f0b.json
+.angular/cache/babel-webpack/1e3501a49a9553e7336a75206bacfb99.json
+.angular/cache/babel-webpack/2a0e1f71f1a3c417a951b0054ec0e96c.json
+.angular/cache/babel-webpack/2a824fdb37a81f59be89e92db37012d7.json
+.angular/cache/babel-webpack/2a393373b2b03236e69688cf08e375d7.json
+.angular/cache/babel-webpack/2afa51a3e23b7a927f5f6a3197f6afe7.json
+.angular/cache/babel-webpack/2bfc2b65a9ce81c49d83743de2e4d22a.json
+.angular/cache/babel-webpack/2d07ba4eb8e2a71bd5201da5f845a7db.json
+.angular/cache/babel-webpack/2ed07ef520ecbcc7fab997fc516c1e2d.json
+.angular/cache/babel-webpack/3a4229c9fc23179801753ea546731175.json
+.angular/cache/babel-webpack/3bc022fc2dcdb88e2eddfc36176b45ae.json
+.angular/cache/babel-webpack/3bf873cf8ef8f58543bc8a22f8efbe18.json
+.angular/cache/babel-webpack/3c16e471f912ef36b49a8bd7c76e5314.json
+.angular/cache/babel-webpack/3f471931e14b9cc8662dadb212941a9c.json
+.angular/cache/babel-webpack/4a3a4fed72365a352b99f78934edf2a5.json
+.angular/cache/babel-webpack/04ab2f7b95ff092ad43b5c5cbdbd6c55.json
+.angular/cache/babel-webpack/4b9cba7173ea274f9a588351d9237aea.json
+.angular/cache/babel-webpack/4d05bba3032de504bf0b662412eed9bc.json
+.angular/cache/babel-webpack/4d81b61058e570788760ca24eaebdbb6.json
+.angular/cache/babel-webpack/4da363bffc0da4a5b884b0a81560c02b.json
+.angular/cache/babel-webpack/4e426f5a2750b3a2f6117993577d8391.json
+.angular/cache/babel-webpack/4ebf24a33319bf1eb2e894d8909c0549.json
+.angular/cache/babel-webpack/4f2a8736150b6e0cba2e2fb7a6a1fc85.json
+.angular/cache/babel-webpack/5d29a0f96bb2d67d31c96a08fa7f0097.json
+.angular/cache/babel-webpack/5e569741eaf3db54956ac89c54507240.json
+.angular/cache/babel-webpack/5efdf019c163c023469ea853a1c186e8.json
+.angular/cache/babel-webpack/5f1f83c0cb18bf79b250f87310f8c826.json
+.angular/cache/babel-webpack/5f987555d9cdb93af59db23dbdae24af.json
+.angular/cache/babel-webpack/6a08924eae45d1ebecc357f13f4413da.json
+.angular/cache/babel-webpack/6b7f01a83bb221ede3031d6ff0df732a.json
+.angular/cache/babel-webpack/6ddabb7d3032cf746a6cab498343e390.json
+.angular/cache/babel-webpack/6e17ed6b1ef8378af349411d3a842f7a.json
+.angular/cache/babel-webpack/6f0b4f8ed58a440066316775962174a8.json
+.angular/cache/babel-webpack/7ae23bf08441a81622b88e2cbe032d9d.json
+.angular/cache/babel-webpack/7b1cc08897782cfe08adacc8d22963be.json
+.angular/cache/babel-webpack/7b2de7930670f547540c36180cce3ef6.json
+.angular/cache/babel-webpack/7be0152fd498a178beb65db109a01dcb.json
+.angular/cache/babel-webpack/7be222b73087be95385909a913476cb6.json
+.angular/cache/babel-webpack/7c313c031d31ebd6151afa01f67dc71b.json
+.angular/cache/babel-webpack/7cdae517095c8dbb74d0b6c8be0de3b6.json
+.angular/cache/babel-webpack/7d23bbf3409ae6e0fea8238aca22fbf5.json
+.angular/cache/babel-webpack/7db1a6782061c853fee2d7ef6d3f65a2.json
+.angular/cache/babel-webpack/7f1d9411060277e324f9c7ac790a97c4.json
+.angular/cache/babel-webpack/7f6237f0c91f99e3e582207271a3ac3d.json
+.angular/cache/babel-webpack/7ffbd353f5d431876592297373a09103.json
+.angular/cache/babel-webpack/8b6fb1dab5590f9ad49f85aac13b9b05.json
+.angular/cache/babel-webpack/8c6b0d117551acf814c0a16afa424f0e.json
+.angular/cache/babel-webpack/8e5aba8d4b8425ae3b99d15324cb6c8c.json
+.angular/cache/babel-webpack/8e605dae37a4f35bc585cafd829b1de0.json
+.angular/cache/babel-webpack/8f353cf8904273dfb16c309a48136ff7.json
+.angular/cache/babel-webpack/8fd64f6fb1aeffa0f9f5d4f80277f1df.json
+.angular/cache/babel-webpack/9a4558e9e627b9a2d1b964d85dced025.json
+.angular/cache/babel-webpack/9a339172669d3bab11bdfdb29803e62c.json
+.angular/cache/babel-webpack/9b8646263259effb947b46fc669910bf.json
+.angular/cache/babel-webpack/09bf8e53b1955f5430b2465645bd6719.json
+.angular/cache/babel-webpack/9c3a5e2ff721aa309a9652929f6d9e39.json
+.angular/cache/babel-webpack/9c3901216cdfa9ea7e484abeddc52dcd.json
+.angular/cache/babel-webpack/9db289367e1d67a96ff78e5a703d2e01.json
+.angular/cache/babel-webpack/9e317d64b1007d64cd87ce66ce043dae.json
+.angular/cache/babel-webpack/9f33adef639e11ca1bb0bb1e6658c59e.json
+.angular/cache/babel-webpack/10d4a0d74b79510dda13eade83fe970e.json
+.angular/cache/babel-webpack/10d33f5a12602154c2f63b4c19cd06e6.json
+.angular/cache/babel-webpack/13a8e0861d8420faf985b3fcd4960f2c.json
+.angular/cache/babel-webpack/15e4e4668a8258c4daf1eb8d17726fef.json
+.angular/cache/babel-webpack/19e2183fb44e64355d3acb787f4fae54.json
+.angular/cache/babel-webpack/22fff6e91b6a50514d70b4b107c798ec.json
+.angular/cache/babel-webpack/27b7c9a2c383bd6116f61eaa06c220e2.json
+.angular/cache/babel-webpack/27e9dfb0eaecab5799cc58ac58d30a2d.json
+.angular/cache/babel-webpack/31d814fb9263ccf7c9772a938d50db89.json
+.angular/cache/babel-webpack/32f2cf3222e3cdd5c57c93241fd323ff.json
+.angular/cache/babel-webpack/33c4341e205fb1c8c9cef6772c01c20a.json
+.angular/cache/babel-webpack/34b4a6a0dfe694ea062b54a8b7de712f.json
+.angular/cache/babel-webpack/38a2d187fab7e7b89362c4a64a6778f1.json
+.angular/cache/babel-webpack/39d58675d4b85f13654a299a8da9bbf1.json
+.angular/cache/babel-webpack/47bc2cb570242420cad98edd6c676af1.json
+.angular/cache/babel-webpack/50cdd8b5438d29efb77f729a604a4fbc.json
+.angular/cache/babel-webpack/51d0fd205843837bfee5f5b4783e2606.json
+.angular/cache/babel-webpack/53c6343c566f7f086f522f2694c94181.json
+.angular/cache/babel-webpack/53e238630621dde3c44c72f6fb2ba26f.json
+.angular/cache/babel-webpack/054f9b69f5ee6fc1074082d1761439d8.json
+.angular/cache/babel-webpack/55b2902958da5e2ff26bc0dd868505f4.json
+.angular/cache/babel-webpack/57c019f9c87257829d4f0691e786293b.json
+.angular/cache/babel-webpack/59d9095f20ea5936057031096f45ab48.json
+.angular/cache/babel-webpack/67a8e80383cfd5d4f67e0fb452389270.json
+.angular/cache/babel-webpack/068af018367f61131db7ae59fa717b35.json
+.angular/cache/babel-webpack/69ba095cda260642febe190086733ff7.json
+.angular/cache/babel-webpack/69d8afe800fa1d07f8bd3360893c2b50.json
+.angular/cache/babel-webpack/73b96cb4bdb6bc36e8c6f07eca2cb28f.json
+.angular/cache/babel-webpack/85f718228dc41580f41175c562ac6800.json
+.angular/cache/babel-webpack/87f6c7b56432b134aef5a803edd7bd6b.json
+.angular/cache/babel-webpack/88a67fe2a0bd9c731abdbab0b092cad7.json
+.angular/cache/babel-webpack/91dea98c0a71388bffe9f4b62cd55f3c.json
+.angular/cache/babel-webpack/94a361e33a635385ef3161f52c03a83c.json
+.angular/cache/babel-webpack/95fcfed9030002cedc83b689de0e97e5.json
+.angular/cache/babel-webpack/96e036e242b70c3af7eddcde89e2682f.json
+.angular/cache/babel-webpack/191c990579894bd4a3f0e7a61d484f87.json
+.angular/cache/babel-webpack/218daeaf34220518e04e14ffa7da56fe.json
+.angular/cache/babel-webpack/258d75b016e3919b60c66b0bcc11affe.json
+.angular/cache/babel-webpack/308ea6776134aef2a8fe75de8278c362.json
+.angular/cache/babel-webpack/332f4ac882c6ec0fe30cd84b1d304e49.json
+.angular/cache/babel-webpack/0353d4d7174c282df9d42963a996fb97.json
+.angular/cache/babel-webpack/362c9c486e5a6a08e7b80d2f8a06ab69.json
+.angular/cache/babel-webpack/362d602e6f8e759e1e7575ff6234fcba.json
+.angular/cache/babel-webpack/391ce2fb0a774c68893e7bbc02b3bff4.json
+.angular/cache/babel-webpack/441f98d69c2c4041db591ef65f98f94e.json
+.angular/cache/babel-webpack/473c540b76c4d0d6b9077120c5799dca.json
+.angular/cache/babel-webpack/482e9a18ba610771f44d17dce7ba616d.json
+.angular/cache/babel-webpack/543b6821c286334ee69a0a910cc2d30d.json
+.angular/cache/babel-webpack/624f46333f1f7a3da00171e54da0a27a.json
+.angular/cache/babel-webpack/0645ddb7a32014fa0fcad1ac579fbe3a.json
+.angular/cache/babel-webpack/681e47fc88b408b74f72f46cc17a54a3.json
+.angular/cache/babel-webpack/684da27235579d12fd80c8943c41f2aa.json
+.angular/cache/babel-webpack/686ab0adfb6ae2df81cf185652606bc2.json
+.angular/cache/babel-webpack/732d0391136da48f807cbf0ae2a5bf16.json
+.angular/cache/babel-webpack/769db1f6958037ee1a8f376e38e5d862.json
+.angular/cache/babel-webpack/777f351ba2522d125e0709adc6398299.json
+.angular/cache/babel-webpack/784dad776b108d4e53dc4d4c73c30a0f.json
+.angular/cache/babel-webpack/804fcaea2db17fefe62a9f60f23567f4.json
+.angular/cache/babel-webpack/864b998b9504ee44e26e6098e569611f.json
+.angular/cache/babel-webpack/886a9db3d44b5c27d707657311d2ad82.json
+.angular/cache/babel-webpack/896c20af56509ea2caed4a93eda5bf02.json
+.angular/cache/babel-webpack/975bfcbf34071495904724dd6f5d0f3c.json
+.angular/cache/babel-webpack/1056edf5409b40a66523926686a146ae.json
+.angular/cache/babel-webpack/1948a6bdae5d458a1293d143c77569b8.json
+.angular/cache/babel-webpack/2057d3eef8c3f0639cd0dd12687f7345.json
+.angular/cache/babel-webpack/2715bd06b151ab83fd32e39e5d440ee7.json
+.angular/cache/babel-webpack/3375d590fa144ce85d965ca2b7fa0994.json
+.angular/cache/babel-webpack/03477d44eae1f3c75c545a3eaba563ba.json
+.angular/cache/babel-webpack/6677a1b9dcf240522f22fe2195d0d1e1.json
+.angular/cache/babel-webpack/7076d7cdcc8017e26f6831416d01b678.json
+.angular/cache/babel-webpack/7100e875d106ce0559dd80ba7143aad7.json
+.angular/cache/babel-webpack/7396f4a411a8edae7d8ba2dd80ab31fb.json
+.angular/cache/babel-webpack/7629df79bfe99c59d907c3ea9e8f6ee9.json
+.angular/cache/babel-webpack/8077db36d0f74a1327817d84d4a340a2.json
+.angular/cache/babel-webpack/46703dcedc63e19562547cac2168e53e.json
+.angular/cache/babel-webpack/60986feb4a2e67c5de1d5bcd832c8b16.json
+.angular/cache/babel-webpack/84833d7475ac885edeaeda5343226629.json
+.angular/cache/babel-webpack/86768f9fbbc24d8772846c814687a903.json
+.angular/cache/babel-webpack/097097ed0b778d85574dc845c8965499.json
+.angular/cache/babel-webpack/105959b6daf49ddbb192c9380bd3a2dc.json
+.angular/cache/babel-webpack/182897b067ef52ece6e3c2d8d0a8b3e9.json
+.angular/cache/babel-webpack/200217a9eb40cf3efb61f4a76ca09c33.json
+.angular/cache/babel-webpack/663382ed973f5a8f6dea86df6aaf888d.json
+.angular/cache/babel-webpack/666191b6a00c566da785443ffa293310.json
+.angular/cache/babel-webpack/689978b7dd7bbee340b2e7ab86d2c6d6.json
+.angular/cache/babel-webpack/982090fd9142a928716133e3e511244d.json
+.angular/cache/babel-webpack/4560597bb5020cc7a2a9593a2a662429.json
+.angular/cache/babel-webpack/5721835cc9c956f33bd877a93ea95620.json
+.angular/cache/babel-webpack/7474633a0d5b125fa5ae2d17feb30783.json
+.angular/cache/babel-webpack/7642482b7a94d00ea793e4c3696deb9d.json
+.angular/cache/babel-webpack/8754761e6133ba8996c7414910f5d331.json
+.angular/cache/babel-webpack/9752476d4124375ee9874aba81dd1196.json
+.angular/cache/babel-webpack/11483575c8acf8c1a37fe04d365796fa.json
+.angular/cache/babel-webpack/16422782d148cf6aaf67939297e564c6.json
+.angular/cache/babel-webpack/38950397d39f6ceb540ce68941afe726.json
+.angular/cache/babel-webpack/87600389e3c83fe07ce225c362f8d768.json
+.angular/cache/babel-webpack/488258300fce8d637c9b357cae73704a.json
+.angular/cache/babel-webpack/517146770bae0869316d41867fed96a0.json
+.angular/cache/babel-webpack/2145147552ac090332099102272c21a8.json
+.angular/cache/babel-webpack/a2e7c1fcf36d2af1b0d2356487a35945.json
+.angular/cache/babel-webpack/a07cd5f119e55231315c67389dd141cc.json
+.angular/cache/babel-webpack/a36d6be80a5e0da6474226bf3b4547c2.json
+.angular/cache/babel-webpack/a40f2e981c85cea0cf0a645e9af54904.json
+.angular/cache/babel-webpack/a69d68bdc3750762cdc12e2640b1151a.json
+.angular/cache/babel-webpack/a84af9ec3ec341ef2a44fbb8bfd47781.json
+.angular/cache/babel-webpack/a138e85bc1563ea66c326157c4548ff5.json
+.angular/cache/babel-webpack/a166041cff20b46b47f903918541338d.json
+.angular/cache/babel-webpack/a5069536e31f63cc5689414948010464.json
+.angular/cache/babel-webpack/aa1f0ffbd73e13015fc456b7bed7c3ba.json
+.angular/cache/babel-webpack/ab3c950d5c36ef9a21701d19df8c478d.json
+.angular/cache/babel-webpack/af7c46311873ba40213a33b0dcefd557.json
+.angular/cache/babel-webpack/afdefc351246311f8224c55c7b74db76.json
+.angular/cache/babel-webpack/b1c60aeea4343fabca565b2dd4913c45.json
+.angular/cache/babel-webpack/b2ffd9f85b4ac18fc4fd1889742373d6.json
+.angular/cache/babel-webpack/b4a33dea7c7d341f8cb9a58b28b8e9a9.json
+.angular/cache/babel-webpack/b04ee857ac1953aa39add8951a2aa6ea.json
+.angular/cache/babel-webpack/b6be0c0eafc10121f6da23302d9b0f6f.json
+.angular/cache/babel-webpack/b8e9c3460a529c11c53d32afa5cb7447.json
+.angular/cache/babel-webpack/b19edbe8fd8d0a3520428bcf406edeaa.json
+.angular/cache/babel-webpack/b59e3148f9f75c27cbac1f1ec493e405.json
+.angular/cache/babel-webpack/b74e482055e2dc791ac9c2e923e5904d.json
+.angular/cache/babel-webpack/bac81d6954795acf9b722e44728c7218.json
+.angular/cache/babel-webpack/bb1dd9543317c698c9cb3a6a034e09d7.json
+.angular/cache/babel-webpack/bc8dbca1a821b0b598cbe294914c1a37.json
+.angular/cache/babel-webpack/be2ea6dbd6c1bf959e4e51a89ee80ab8.json
+.angular/cache/babel-webpack/be5d916dd8e85f688680bef9bcc66712.json
+.angular/cache/babel-webpack/be1204744526ba06bdb05cf233ae4ca0.json
+.angular/cache/babel-webpack/c1c825e845888487f86909f149f48ea4.json
+.angular/cache/babel-webpack/c6cf8082a11ad678b4adac20605c093d.json
+.angular/cache/babel-webpack/c7d7cdb58fd164564a8d86db578c067f.json
+.angular/cache/babel-webpack/c8cb7649c4f4f2f0de728f4592743ace.json
+.angular/cache/babel-webpack/c8f64454fe98009505ac82bc1168ea24.json
+.angular/cache/babel-webpack/c020bd5fa4904ebbd8448c65d794800d.json
+.angular/cache/babel-webpack/c54d94bd25b5174e8c45aa4debd7dcb0.json
+.angular/cache/babel-webpack/c63f54145baa39bd97f4d60d2d821de2.json
+.angular/cache/babel-webpack/c73e28a9d4c916b9284cca159415c440.json
+.angular/cache/babel-webpack/c86e2c30ef3e2c55b30a9cb6a47bc2d5.json
+.angular/cache/babel-webpack/c362a1c1405485314412528d351372ee.json
+.angular/cache/babel-webpack/c5470d62ec9c10db72e6858af71fc737.json
+.angular/cache/babel-webpack/c3633640963609c79f69e2c15445a67b.json
+.angular/cache/babel-webpack/cb7002e3c999dd2d55a195c65650b295.json
+.angular/cache/babel-webpack/cbca31b76be786d32a34885aa6221501.json
+.angular/cache/babel-webpack/cbcb03716fe296cbf0afe8ebf6ee6da3.json
+.angular/cache/babel-webpack/cbf4d25da2790b6678a9bb71c96d595d.json
+.angular/cache/babel-webpack/cc7187032a5a0d45b8c203c5de630dd0.json
+.angular/cache/babel-webpack/cdbc3c377152087c2ef2a8acd6c7844b.json
+.angular/cache/babel-webpack/ce2ae3997ee7137419897bdbdd7ceecd.json
+.angular/cache/babel-webpack/cf91624bc5847abad55e087eb422487f.json
+.angular/cache/babel-webpack/d3cc8e9179150a9fcada771392a688bc.json
+.angular/cache/babel-webpack/d3fe1f3e1cbcc1073fff266e8af3cc09.json
+.angular/cache/babel-webpack/d007bbf5e9e5418129a3547a0724d277.json
+.angular/cache/babel-webpack/d98d22decdb28a5bcb0177b74ca91983.json
+.angular/cache/babel-webpack/d183d3efc3025d29af505f15d362258b.json
+.angular/cache/babel-webpack/d319e7e3e4618479532242eea1c2497e.json
+.angular/cache/babel-webpack/dcc1993b389963890f78d7f1c6326492.json
+.angular/cache/babel-webpack/dd83452f9c4a3ef1cbb43a00d7bfdfc9.json
+.angular/cache/babel-webpack/dfaa46c5adc72eb2a600eead73bda46b.json
+.angular/cache/babel-webpack/e02b37ba2a7c204aa1eb37afe4a1646e.json
+.angular/cache/babel-webpack/e9d4f5f08b301185806e6628137054d0.json
+.angular/cache/babel-webpack/e19b23b31e01913337610ea14155833c.json
+.angular/cache/babel-webpack/e37adb5c54218f9d933dfad261011f4d.json
+.angular/cache/babel-webpack/e90b7fe8f6b16cb966ffa13c3f61a38d.json
+.angular/cache/babel-webpack/e92c0d63a20e90334e9d68083c7bbc11.json
+.angular/cache/babel-webpack/e185c9fbdacc217d4cd96db3409cf16a.json
+.angular/cache/babel-webpack/e596d9cfaf13185b355fd823b6703d66.json
+.angular/cache/babel-webpack/e4699e01e565ce453ef23d5a2141ef29.json
+.angular/cache/babel-webpack/eabb978fc6147bccef96cea8d1148e61.json
+.angular/cache/babel-webpack/eb9937240ba90d8bec4cd3885153bc5f.json
+.angular/cache/babel-webpack/ec3eda52ffbe13072f14017659cc2c05.json
+.angular/cache/babel-webpack/ed2db81c5c5a7d93343c6e582ff57034.json
+.angular/cache/babel-webpack/ed8313a9ff6ce4e71b457cb49c611a03.json
+.angular/cache/babel-webpack/ed87631ad76bc2251bbb22cf7626f85e.json
+.angular/cache/babel-webpack/edea70ffd7f3b447e222e8a579544f5f.json
+.angular/cache/babel-webpack/eec53903220a034923c056ce304a3eda.json
+.angular/cache/babel-webpack/ef06c924c9ab84d4f155078f0ffe0648.json
+.angular/cache/babel-webpack/f2bd1d7ddab403fd95f4dae8f3f06cdc.json
+.angular/cache/babel-webpack/f4a9041e14dd1b56097e2cbc12a98ce2.json
+.angular/cache/babel-webpack/f7b07844638898b4f560b7ddda648d0b.json
+.angular/cache/babel-webpack/f8b7b3780ccaf631c7c62b2e5e8cdf82.json
+.angular/cache/babel-webpack/f8de8daee4e9f7cfbc475eca00b7b8df.json
+.angular/cache/babel-webpack/f35c7151085598fb01f7c8e778f3dce5.json
+.angular/cache/babel-webpack/f71e1d6b7b5036f2e5e6a0b6e9e1d016.json
+.angular/cache/babel-webpack/f85aad79ff018a438c2ca662c57ba740.json
+.angular/cache/babel-webpack/f3392b87d5655c9e435e28d4ef6440bf.json
+.angular/cache/babel-webpack/f8381b491a05d8cd703b68f811809be8.json
+.angular/cache/babel-webpack/f18462181648eb46da7dd483c65d2cd0.json
+.angular/cache/babel-webpack/faa22c4edc62632a863e59776f61f4f8.json
+.angular/cache/babel-webpack/fd31124fe862e42fcadc5d05b622cc7d.json
+.angular/cache/babel-webpack/fdda7c5de0f65d859fa56fee2ea557cc.json
+.angular/cache/babel-webpack/fe0a36ad0c1a50fc84bc13191599eb42.json
+.angular/cache/babel-webpack/fea103958a0abc0eeadd3e7970b87930.json
+.angular/cache/babel-webpack/fef66bce6a84ffdfe576ffa25cdcdedc.json
+.angular/cache/babel-webpack/ff7cdbbcfc06a136c5a267ede027cbbc.json
+.angular/cache/angular-webpack/c84c4254358c41bb1625f259ae432347ec08d326/0.pack
+.angular/cache/angular-webpack/c84c4254358c41bb1625f259ae432347ec08d326/index.pack
+.angular/cache/angular-webpack/04ea5f40b9006b19022311be4252c7cc4ced4c24/0.pack
+.angular/cache/angular-webpack/04ea5f40b9006b19022311be4252c7cc4ced4c24/index.pack
+.angular/cache/angular-webpack/c84c4254358c41bb1625f259ae432347ec08d326/1.pack
+.angular/cache/angular-webpack/c84c4254358c41bb1625f259ae432347ec08d326/2.pack
+.angular/cache/angular-webpack/c84c4254358c41bb1625f259ae432347ec08d326/index.pack.old
