- Corrected the server.service.ts file observable apiUrl link

--- a/.gitignore
+++ b/.gitignore
@@ -314,3 +314,36 @@ Thumbs.db
 .angular/cache/angular-webpack/c84c4254358c41bb1625f259ae432347ec08d326/1.pack
 .angular/cache/angular-webpack/c84c4254358c41bb1625f259ae432347ec08d326/2.pack
 .angular/cache/angular-webpack/c84c4254358c41bb1625f259ae432347ec08d326/index.pack.old
+.angular/cache/angular-webpack/04ea5f40b9006b19022311be4252c7cc4ced4c24/1.pack
+.angular/cache/angular-webpack/04ea5f40b9006b19022311be4252c7cc4ced4c24/2.pack
+.angular/cache/angular-webpack/04ea5f40b9006b19022311be4252c7cc4ced4c24/index.pack.old
+.angular/cache/angular-webpack/c84c4254358c41bb1625f259ae432347ec08d326/3.pack
+.angular/cache/angular-webpack/c84c4254358c41bb1625f259ae432347ec08d326/4.pack
+.angular/cache/angular-webpack/c84c4254358c41bb1625f259ae432347ec08d326/5.pack
+.angular/cache/angular-webpack/c84c4254358c41bb1625f259ae432347ec08d326/6.pack
+.angular/cache/angular-webpack/c84c4254358c41bb1625f259ae432347ec08d326/7.pack
+.angular/cache/angular-webpack/c84c4254358c41bb1625f259ae432347ec08d326/8.pack
+.angular/cache/angular-webpack/c84c4254358c41bb1625f259ae432347ec08d326/9.pack
+.angular/cache/angular-webpack/c84c4254358c41bb1625f259ae432347ec08d326/10.pack
+.angular/cache/angular-webpack/c84c4254358c41bb1625f259ae432347ec08d326/11.pack
+.angular/cache/angular-webpack/c84c4254358c41bb1625f259ae432347ec08d326/12.pack
+.angular/cache/babel-webpack/1c507e7a3d4e63b891c93868a3b72773.json
+.angular/cache/babel-webpack/5ce7bac49073ddbe6b20d27dca38d42d.json
+.angular/cache/babel-webpack/7ea5d15e62936a1eeadc3e75d36af6ef.json
+.angular/cache/babel-webpack/9bfc32fcb429d9b464db5fc4c81bccca.json
+.angular/cache/babel-webpack/9c8448dfe948c98f4aee689255f39ac5.json
+.angular/cache/babel-webpack/9d298db6b3fd084410a2e9221cf22e91.json
+.angular/cache/babel-webpack/16a5757210f62acd5f3cb7765de2edb7.json
+.angular/cache/babel-webpack/49ef61fd122a3dc71d4f3536f4853852.json
+.angular/cache/babel-webpack/146fb47cbdc1793823f3b2bb0eee04ad.json
+.angular/cache/babel-webpack/680a49c6e9f2920599ac0daaefc7c19a.json
+.angular/cache/babel-webpack/100659cf772aba044c238cfd9f0c35f0.json
+.angular/cache/babel-webpack/0197473b530f6a4f684d14161416b7de.json
+.angular/cache/babel-webpack/2411701e49c7151713468fe5ea456dcc.json
+.angular/cache/babel-webpack/bc2bce7bb63ee69b545ba4b506afd3b6.json
+.angular/cache/babel-webpack/c1d5bc39ddc916c1dbf24ecedacc19aa.json
+.angular/cache/babel-webpack/c8d624926174c1c91d619bbf5f5b09c5.json
+.angular/cache/babel-webpack/df6957bc39327f0f67d89ad2a7dbb35f.json
+.angular/cache/babel-webpack/e66daf3eb79696b6c225ee0a34a12a26.json
+.angular/cache/babel-webpack/e6563419bb127ff9c56bbaf97775a472.json
+.angular/cache/babel-webpack/f4b8ca5f442c757524eff22a296f9c5a.json
