-Added font and bootstap imports to app components

--- a/.gitignore
+++ b/.gitignore
@@ -347,3 +347,34 @@ Thumbs.db
 .angular/cache/babel-webpack/e66daf3eb79696b6c225ee0a34a12a26.json
 .angular/cache/babel-webpack/e6563419bb127ff9c56bbaf97775a472.json
 .angular/cache/babel-webpack/f4b8ca5f442c757524eff22a296f9c5a.json
+.angular/cache/babel-webpack/f9956b53aeda7afe9ed482273ac4986a.json
+.gitignore
+.angular/cache/babel-webpack/6993b5fac89dff3aaf0188891fac95a0.json
+.angular/cache/babel-webpack/ac4899babe1b1f2672deff604277ed46.json
+.gitignore
+.angular/cache/babel-webpack/0e398f510e7c0e73eadaf3d69a1f52a9.json
+.angular/cache/babel-webpack/1a64453be36e14e108ee000f55488850.json
+.angular/cache/babel-webpack/4af5f4ddbe4f1437dadef94b3fe52d23.json
+.angular/cache/babel-webpack/4fe69371d09f0b7d9d8a493b0edb5f79.json
+.angular/cache/babel-webpack/5ec80a91ff6d553634ff3ccb5e4c46a2.json
+.angular/cache/babel-webpack/6d0258ad15a72d438ca9f9c783417a2b.json
+.angular/cache/babel-webpack/46bfa3bf112c0addabff683c175da4e4.json
+.angular/cache/babel-webpack/48d8860f0dfcb4cbc02be7c6546e49d6.json
+.angular/cache/babel-webpack/49bcd4daf1cba2390a32ae9d16ca5b3c.json
+.angular/cache/babel-webpack/75a047aa0c7081efb4bbc047763e3935.json
+.angular/cache/babel-webpack/807e541374459f2391ecbfa9d9e588c5.json
+.angular/cache/babel-webpack/1340dea4ed5717f7ad55d02ed7016530.json
+.angular/cache/babel-webpack/5485f8752312ff3b2a4be9e03a1dee18.json
+.angular/cache/babel-webpack/43286cb329d6e4ac89d5dd0034d735b8.json
+.angular/cache/babel-webpack/89940a07ff605b6525b69ead23e2923e.json
+.angular/cache/babel-webpack/b9a19bec4cff505c486ec39a91cfad6c.json
+.angular/cache/babel-webpack/ba48c751eb4f6d00c6c830c135790078.json
+.angular/cache/babel-webpack/d09ccd72aa852c6a299d814be2653457.json
+.angular/cache/babel-webpack/d39adb708720b1668d6e7549b6b15fd8.json
+.angular/cache/babel-webpack/e1c93bd7bb485e7bf962e5e9e1f9db83.json
+.angular/cache/babel-webpack/e89c07a3bf270d91ad4186f8f7b92887.json
+.angular/cache/babel-webpack/e98691f540c2bf7d8e01005f5ead2378.json
+.angular/cache/babel-webpack/eab3abc8a68eccc2bdc9e7e0c06682d3.json
+.angular/cache/babel-webpack/f3f9178b8be38fa83d10f29b5b4119cd.json
+.angular/cache/babel-webpack/f8ac189170da8f34c1b09f1007d69b61.json
+.angular/cache/babel-webpack/7cc9939e686ff3d86272926aadde66a4.json
