- An addition of functions have been added to the HTML code - Bug noticed not displaying sample data

--- a/.gitignore
+++ b/.gitignore
@@ -378,3 +378,96 @@ Thumbs.db
 .angular/cache/babel-webpack/f3f9178b8be38fa83d10f29b5b4119cd.json
 .angular/cache/babel-webpack/f8ac189170da8f34c1b09f1007d69b61.json
 .angular/cache/babel-webpack/7cc9939e686ff3d86272926aadde66a4.json
+.angular/cache/babel-webpack/0ed18a2afb4f09ee2a2b3c2c6a198be6.json
+.angular/cache/babel-webpack/3e479b3f0d3cdb15012fd438234a0c88.json
+.angular/cache/babel-webpack/3ed19af72534a6085cb30133ad78bdde.json
+.angular/cache/babel-webpack/3faff2badd183763a9fb1071d9f80e04.json
+.angular/cache/babel-webpack/4d3ce7b2703710f78f4b337b49b3f949.json
+.angular/cache/babel-webpack/4f71d80979b4dc1d218326c820346205.json
+.angular/cache/babel-webpack/5ab9971f8af915b804d6db6bc02dba90.json
+.angular/cache/babel-webpack/6b7077f05f39f84d258e227cd0ee19e2.json
+.angular/cache/babel-webpack/7d99e411302d258c7f185a9e75975eb5.json
+.angular/cache/babel-webpack/8bc81a3a535d6027e5ace34d1d6c9a88.json
+.angular/cache/babel-webpack/8e72fb3e8c3bd7968b687983fc55053e.json
+.angular/cache/babel-webpack/8f3c7cc1c9e400f949d7e7b95e3da318.json
+.angular/cache/babel-webpack/9b9f701ff05b0fc571d6d28719a5d383.json
+.angular/cache/babel-webpack/9cf803ef1aab4f900a5dddcf835faaf4.json
+.angular/cache/babel-webpack/9cff0a7bcfd586ac7210a323f3b2d69c.json
+.angular/cache/babel-webpack/20e6997bd59b39ac51de2d7783074602.json
+.angular/cache/babel-webpack/21c94d64e8bde0808a3f18ace886e599.json
+.angular/cache/babel-webpack/70fb2ab7ff1efddd805b1fe2b43fc868.json
+.angular/cache/babel-webpack/84c770f664a2290bb861a73d1448c079.json
+.angular/cache/babel-webpack/90de7aaaedf1394f0614f4bac62fe2f5.json
+.angular/cache/babel-webpack/0098afc95c1067ba9ab8f76bdd055565.json
+.angular/cache/babel-webpack/5522eec7ca1ae9ce944cb650ef2f1a28.json
+.angular/cache/babel-webpack/a4f29f01460489be3418551dcf1a27f9.json
+.angular/cache/babel-webpack/a9cd979e7e0356fec624e4e0d899760f.json
+.angular/cache/babel-webpack/a88896e2f0faba8fc4858ebaa0452072.json
+.angular/cache/babel-webpack/aaacb67a081ef43835774effddfeba33.json
+.angular/cache/babel-webpack/abfc1d3509d48ceb7816ffb15a080301.json
+.angular/cache/babel-webpack/b3601f80f5036af2dd4f46b2ffdf1641.json
+.angular/cache/babel-webpack/c6b5f5f7a0ce7ddcfeecd37119f91f7f.json
+.angular/cache/babel-webpack/d5bbdaa6ddf2386faa186f09f4d830cf.json
+.angular/cache/babel-webpack/d240d5350fd36c169887047d8058a335.json
+.angular/cache/babel-webpack/d671778ea249044b488b6c56c116f65b.json
+.angular/cache/babel-webpack/e2dc50c29af14edbb99b42d4f3e3f260.json
+.angular/cache/babel-webpack/e08ffe0fd07a3466e7b2214d4aa4d865.json
+.angular/cache/babel-webpack/e39a34b355335f4403b32156be08fbae.json
+.angular/cache/babel-webpack/fa350b087a7d32cdf93a07250dd053fe.json
+.angular/cache/angular-webpack/04ea5f40b9006b19022311be4252c7cc4ced4c24/3.pack
+.angular/cache/angular-webpack/04ea5f40b9006b19022311be4252c7cc4ced4c24/4.pack
+.angular/cache/angular-webpack/04ea5f40b9006b19022311be4252c7cc4ced4c24/5.pack
+.angular/cache/babel-webpack/072d5e5d0b30f1a8c4a805548013e11b.json
+.angular/cache/babel-webpack/85cf1cb0c2514a599eb7ae26e4a0e434.json
+.angular/cache/babel-webpack/0f40ec73cb4b61310d68be587451fcac.json
+.angular/cache/babel-webpack/1fc8b965dfe2e14e4b704c88c73be984.json
+.angular/cache/babel-webpack/2b6ac3a3fd0100d4d5e06a33094d59ed.json
+.angular/cache/babel-webpack/2e6d7b12fdebf0911b0adf74fef32090.json
+.angular/cache/babel-webpack/2e9d0503d17a5232a17b4db104cc909c.json
+.angular/cache/babel-webpack/3df6f300dcb003001146f73556021ab6.json
+.angular/cache/babel-webpack/4d1c9e7f2ce130bee23d914156b09d6e.json
+.angular/cache/babel-webpack/5d151f807daea32347b81185b3c90a20.json
+.angular/cache/babel-webpack/6e3d1c85792ca4218fa0ed2342e1f75d.json
+.angular/cache/babel-webpack/6ed338025b92a336234c3d850d3ab8f3.json
+.angular/cache/babel-webpack/7e6f99556195a24a24b801127c993755.json
+.angular/cache/babel-webpack/7f168e75f997a47dc157d16074b5b6e7.json
+.angular/cache/babel-webpack/8a761b7a7c023fc861c6f40cbc290bb8.json
+.angular/cache/babel-webpack/9b902a60a82774252f9bbb1295bddfde.json
+.angular/cache/babel-webpack/9ce85c697051bbf3a919274c6c7f6d5a.json
+.angular/cache/babel-webpack/44c12cad973346b05a96f2f48c105129.json
+.angular/cache/babel-webpack/52bb80a998301e29a65c7358b679b30e.json
+.angular/cache/babel-webpack/52e0850d7d5696b7886984a4a4823cb6.json
+.angular/cache/babel-webpack/55adcd300d6d62f373076157fbfeb2a7.json
+.angular/cache/babel-webpack/72a663badbc7ec9dc2a2d6ee75877ea8.json
+.angular/cache/babel-webpack/84f1477a713513cc42a674dc3c9d05bf.json
+.angular/cache/babel-webpack/161e254b4ac5290a53b42dfcbe550c2a.json
+.angular/cache/babel-webpack/209c78a5871049cd1f6809fbb4c1c8b0.json
+.angular/cache/babel-webpack/429a533eab541d6a92be003e0ca6d555.json
+.angular/cache/babel-webpack/561ef721822824c94509350cac587235.json
+.angular/cache/babel-webpack/585f366ba65b72333b3da192c8c13e8d.json
+.angular/cache/babel-webpack/677a2df21d40c0197e388fb0affd5d7f.json
+.angular/cache/babel-webpack/831c97bb439e11282496d3497c287a5b.json
+.angular/cache/babel-webpack/2431f515285312001160da680d2a1745.json
+.angular/cache/babel-webpack/5135c54e9b0f57fcb20d52cb546efc63.json
+.angular/cache/babel-webpack/6588bfbd4e3ba2f0431de048726f34e6.json
+.angular/cache/babel-webpack/8458d745d40bba3bd2b31c0ede4e4a41.json
+.angular/cache/babel-webpack/27936fa13ca900989275c8022c58767e.json
+.angular/cache/babel-webpack/46280bd464fcf3d5c2339d3a101e2c64.json
+.angular/cache/babel-webpack/7684765dbbb34849226be182d91f3410.json
+.angular/cache/babel-webpack/a3a37d3a7559bc1d8abc567c6e1932f2.json
+.angular/cache/babel-webpack/a276e665c2a46d58f52b4d76cfdbe2b4.json
+.angular/cache/babel-webpack/b74adecbdf36b88595de54e2e383f347.json
+.angular/cache/babel-webpack/ba081231293074880af1d078f4dacf6c.json
+.angular/cache/babel-webpack/bb05f627fc824e968ba2215fe909620c.json
+.angular/cache/babel-webpack/be4af5acc911b74261fec0bd9b931bb1.json
+.angular/cache/babel-webpack/c5efb70b78ab9e171822ed8729002d2c.json
+.angular/cache/babel-webpack/c75585f8c14e0de1aa1333d191ba221c.json
+.angular/cache/babel-webpack/d2ce4cfa0c0e909b79eb90022431fd9c.json
+.angular/cache/babel-webpack/d17be1e04b44e7201b2b062c5a6dcb1c.json
+.angular/cache/babel-webpack/dfeeb1d85160b133668c118cfc8827b8.json
+.angular/cache/babel-webpack/e13a32b5e02825eae49475f3f228f670.json
+.angular/cache/babel-webpack/e6036dc52c2e60bab2cf04d434aa4cd0.json
+.angular/cache/babel-webpack/ec23a176fd4b50c5c4eb86a31abf76e9.json
+.angular/cache/babel-webpack/eeeffa9db40bb272426283ca873a7e83.json
+.angular/cache/babel-webpack/f8c830c120e8d8bbe0d9547e52dc707b.json
+.angular/cache/babel-webpack/fd47ac4990ca7c8f24bf844131f8ea05.json
