- Added the filter subject function to filter the status and ping of server

--- a/.gitignore
+++ b/.gitignore
@@ -471,3 +471,32 @@ Thumbs.db
 .angular/cache/babel-webpack/eeeffa9db40bb272426283ca873a7e83.json
 .angular/cache/babel-webpack/f8c830c120e8d8bbe0d9547e52dc707b.json
 .angular/cache/babel-webpack/fd47ac4990ca7c8f24bf844131f8ea05.json
+.angular/cache/angular-webpack/c84c4254358c41bb1625f259ae432347ec08d326/13.pack
+.angular/cache/angular-webpack/c84c4254358c41bb1625f259ae432347ec08d326/14.pack
+.angular/cache/angular-webpack/c84c4254358c41bb1625f259ae432347ec08d326/15.pack
+.angular/cache/babel-webpack/2d1d9cdb927689afb96723e47eda9bf2.json
+.angular/cache/babel-webpack/3a63f53d806c006cb9cb3a7afa2df58a.json
+.angular/cache/babel-webpack/5aafc43733b2f5de6e179a152581971e.json
+.angular/cache/babel-webpack/5aeb2ee6b79897fb540a78899749d17c.json
+.angular/cache/babel-webpack/5d2ca97419b83f74eceb7e60d404fe82.json
+.angular/cache/babel-webpack/6e13bf709020ff65e086f7d31d26f907.json
+.angular/cache/babel-webpack/7a808c77761626b8d0b713165cf0f463.json
+.angular/cache/babel-webpack/7f3a34b5dccaec62c8627e4520af0b9c.json
+.angular/cache/babel-webpack/9d52fc7f85e860b6beaa464f598e3236.json
+.angular/cache/babel-webpack/24b7cf667bba7c7bc477eaaace596f29.json
+.angular/cache/babel-webpack/36af67a1f9a3b797a650ff63904a9998.json
+.angular/cache/babel-webpack/052cf73e6ad656997ca6c125ebd99234.json
+.angular/cache/babel-webpack/089e5dff76da843e0cec97939e219f7c.json
+.angular/cache/babel-webpack/229d922de7ce1b5a191e352cfa60bdf7.json
+.angular/cache/babel-webpack/261c5840125f1362762f33111c350c10.json
+.angular/cache/babel-webpack/700a4c3c1a1bc9e654500d23e5738c90.json
+.angular/cache/babel-webpack/8712c96661684356af49cc7663b3dae1.json
+.angular/cache/babel-webpack/82242e8242faa59227daf21d3fe1441d.json
+.angular/cache/babel-webpack/835923ba4692bcea13bb95ccd1ab7480.json
+.angular/cache/babel-webpack/4438668d569972e83f1587a4207d6ecb.json
+.angular/cache/babel-webpack/a4f6c9f69c839cefcf1f1a22c9c74880.json
+.angular/cache/babel-webpack/b4dad47b1be22ea5cc4fb34b361df9f7.json
+.angular/cache/babel-webpack/cbf4e68a1d484fdc1dbf09f044d4676f.json
+.angular/cache/babel-webpack/df9137251228ff37ce890b12aac3a9dd.json
+.angular/cache/babel-webpack/f1ae9af824b9f68a27632163e4f1b2bb.json
+.angular/cache/babel-webpack/f381aae4d5925ca624820e29e0ecfaf7.json
