Updated the server.service.ts file and removed unneeded code from the css file

--- a/.gitignore
+++ b/.gitignore
@@ -500,3 +500,12 @@ Thumbs.db
 .angular/cache/babel-webpack/df9137251228ff37ce890b12aac3a9dd.json
 .angular/cache/babel-webpack/f1ae9af824b9f68a27632163e4f1b2bb.json
 .angular/cache/babel-webpack/f381aae4d5925ca624820e29e0ecfaf7.json
+.angular/cache/angular-webpack/c84c4254358c41bb1625f259ae432347ec08d326/16.pack
+.angular/cache/angular-webpack/04ea5f40b9006b19022311be4252c7cc4ced4c24/6.pack
+.angular/cache/angular-webpack/04ea5f40b9006b19022311be4252c7cc4ced4c24/7.pack
+.angular/cache/angular-webpack/04ea5f40b9006b19022311be4252c7cc4ced4c24/8.pack
+.angular/cache/babel-webpack/9aa0778059acb6a3719837f529d629df.json
+.angular/cache/babel-webpack/86cb697534ac2b77af8180683c598b23.json
+.angular/cache/babel-webpack/592c48fbdbddf52d9ebeebf42e08c71b.json
+.angular/cache/babel-webpack/ddf31839e5a05b04e2902c41272625ac.json
+.angular/cache/babel-webpack/e8281ec67ebe7148e4016db10138340d.json
