- Corrected a "WARNING/ERROR in budgets, maximum exceeded for initial" in Angular.json file - Added the ping functionality

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /dist
 /tmp
 /out-tsc
+
 # Only exists if Bazel was run
 /bazel-out
 
@@ -509,3 +510,54 @@ Thumbs.db
 .angular/cache/babel-webpack/592c48fbdbddf52d9ebeebf42e08c71b.json
 .angular/cache/babel-webpack/ddf31839e5a05b04e2902c41272625ac.json
 .angular/cache/babel-webpack/e8281ec67ebe7148e4016db10138340d.json
+.angular/cache/angular-webpack/04ea5f40b9006b19022311be4252c7cc4ced4c24/9.pack
+.angular/cache/angular-webpack/916c1dce9b2e8bf062148f25744a7d2683a6e2b5/0.pack
+.angular/cache/angular-webpack/916c1dce9b2e8bf062148f25744a7d2683a6e2b5/index.pack
+.angular/cache/babel-webpack/2eff45df69e57a001380313391ad6c6a.json
+.angular/cache/babel-webpack/8fe7464cb2ba99c29d36bc1b1aa14f16.json
+.angular/cache/babel-webpack/11a2895589c733d37ddf6d4b1e055c5f.json
+.angular/cache/babel-webpack/079a575bb198ee9c8f16d63c21259baf.json
+.angular/cache/babel-webpack/447a4634f5cafdc639d99b98cd88f5ab.json
+.angular/cache/babel-webpack/578cb5d1337b513fd6bd3b269c0b3dfd.json
+.angular/cache/babel-webpack/4063a032e0b36bdd4fb272cffccdc8c5.json
+.angular/cache/babel-webpack/ad757b4a607adbd69af4ad1e6fa7a324.json
+.angular/cache/babel-webpack/c9ad6cd48757f0eff57f9e12ebb12bf1.json
+.angular/cache/babel-webpack/cbaa84929477bc831c18930d8c9a528c.json
+.angular/cache/babel-webpack/da8182cb7a9da5a29ef3c0f1c5637e3e.json
+.angular/cache/babel-webpack/f5fbdc698d9fce8253624e1bddc8706b.json
+.angular/cache/babel-webpack/f08f22de7153daf0e54c414e3a20e4d0.json
+.angular/cache/babel-webpack/f23dc1639554456ad2c23040260e05dd.json
+.angular/cache/angular-webpack/916c1dce9b2e8bf062148f25744a7d2683a6e2b5/1.pack
+.angular/cache/angular-webpack/916c1dce9b2e8bf062148f25744a7d2683a6e2b5/2.pack
+.angular/cache/angular-webpack/916c1dce9b2e8bf062148f25744a7d2683a6e2b5/index.pack.old
+.angular/cache/angular-webpack/eacb346ee42a5d1a4edceb2f4752c9d703ebb206/0.pack
+.angular/cache/angular-webpack/eacb346ee42a5d1a4edceb2f4752c9d703ebb206/1.pack
+.angular/cache/angular-webpack/eacb346ee42a5d1a4edceb2f4752c9d703ebb206/2.pack
+.angular/cache/angular-webpack/eacb346ee42a5d1a4edceb2f4752c9d703ebb206/index.pack
+.angular/cache/angular-webpack/eacb346ee42a5d1a4edceb2f4752c9d703ebb206/index.pack.old
+.gitignore
+.angular/cache/babel-webpack/0b0cbb4e93419383f7ddbd37e41b9a79.json
+.angular/cache/babel-webpack/2d15c14dce5fec52b1388dd24a3d3866.json
+.angular/cache/babel-webpack/5d288082f23f9568a870cd64ebd11ce0.json
+.angular/cache/babel-webpack/6cfe4d38b5cfa7656c388bfa95f63533.json
+.angular/cache/babel-webpack/8a8b62db46a5e5af0cb361052c5a02ea.json
+.angular/cache/babel-webpack/8f66d0599198ac93cf9113c96b492187.json
+.angular/cache/babel-webpack/9b8f722380dcc304e4eb156fad4302f5.json
+.angular/cache/babel-webpack/9c19a9e33ad568680530181b16ed01f8.json
+.angular/cache/babel-webpack/9d1a6a523b228f03109858da51ba6d46.json
+.angular/cache/babel-webpack/26bdbd77b68f2d2b8beff5158d7ce3db.json
+.angular/cache/babel-webpack/188ebd1223389a7fa78281aa50e79e46.json
+.angular/cache/babel-webpack/2551a8829fcc826b817976852b69961c.json
+.angular/cache/babel-webpack/3703d028371f4b9533c4f0ed1422cc7d.json
+.angular/cache/babel-webpack/5012e12dd7b88eae88a1f160026d3f6e.json
+.angular/cache/babel-webpack/6161b0b30cc3264bea359d6dc3e88b03.json
+.angular/cache/babel-webpack/30561d1255fafefc07306edb6a5268b6.json
+.angular/cache/babel-webpack/66912fb937bd5b21b91f1552cce2307c.json
+.angular/cache/babel-webpack/80050534cf161a4f9316e58f52174b24.json
+.angular/cache/babel-webpack/c2c4ecac6117678a87a141a5a4218a55.json
+.angular/cache/babel-webpack/c8341b33e61b7cf99ac072d412f33f21.json
+.angular/cache/babel-webpack/d961316abb028c3de1626b281a3c96b7.json
+.angular/cache/babel-webpack/dfb3d7dc8f49ef3da9ff1da85dffcdd0.json
+.angular/cache/babel-webpack/e7ff1a480f47c982982041333421dc64.json
+.angular/cache/babel-webpack/f6ed3a3cbc400f0d911c3f7d2941ab8e.json
+.angular/cache/babel-webpack/ff361db4738edcb8134ae505fff3bb27.json
